--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <div>
 <body style="background-color: rgba(180, 168, 81, 0.522);">
-    <link rel="stylesheet" href="style.css">
+    
+    <link rel="stylesheet" href="css.css">
     <nav style="background-color: rgb(178, 199, 129);height: 80px; border: 80pc;">
     <img src="images/contapic.jpg" height="70px">
     <a href="index.html">Home</a>
-    <a href="services">Services</a>
+    <a href="aboutus">About Us</a>
     <a href="contactus">Contact Us</a>
 </nav>
 </div>
