--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <img src="images/contapic.jpg" height="70px">
     <a href="index.html">Home</a>
     <a href="aboutus">About Us</a>
-    <a href="contactus">Contact Us</a>
-</nav>
+    <a href="contactus.html">Contact Us</a>
+    </nav>
 </div>
 <h1>ABOUT US</h1>
 <h1>JuJu Explore Space Travel</h1>
@@ -37,7 +37,7 @@
 <a style="font-size: x-large;"> to venture beyond Earth.</a>
 <br>
 <img src="images/aboupic.jpg">
-<div style="float: right;right: ;">
+<div style="float: right;">
     <h1 >What We Do</h1>
 <a>At JuJu Space Travel Explore, our mission is to revolutionize space travel and exploration by pushing the</a>
 <br>
